# stockfish-bot

./: Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.dev.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_price_history.py  003_add_article_urls.py  004_structured_outputs.py  005_technical_indicators.py  006_finbert_sentiment.py  007_agent_traces.py  008_add_signal_quality_models.py
app/: config.py  database.py  main.py
app/analysis/: indicators.py  sentiment.py  service.py
app/api/: routes.py  websocket.py
app/engine/: __init__.py  aggregator.py  calibration.py  decision.py  events.py  normalizer.py  portfolio.py  scorer.py
app/llm/: __init__.py  agent_prompts.py  base.py  claude.py  factory.py  gemini.py  ollama.py  openai_provider.py  pipeline.py  prompt.py  risk_context.py  schemas.py  tool_executor.py  tools.py
app/models/: __init__.py  base.py  calibration.py  market_data.py  monitoring.py  portfolio.py  trades.py
app/monitors/: __init__.py  base.py  news.py  price.py  reddit.py
app/schemas/: __init__.py  responses.py
tests/: conftest.py  test_config.py  test_step1_models.py
tests/test_api/: test_routes.py  test_websocket.py
tests/test_engine/: test_aggregator.py  test_calibration.py  test_decision.py  test_events.py  test_normalizer.py  test_portfolio.py  test_scorer.py
tests/test_llm/: test_base.py  test_claude.py  test_factory.py  test_gemini.py  test_ollama.py  test_openai.py
tests/test_models/: test_market_data.py  test_portfolio.py  test_trades.py
(+3 files in other folders)
