[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockfish-bot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "apscheduler>=3.10.4",
    "alpaca-py>=0.35.0",
    "yfinance>=0.2.50",
    "feedparser>=6.0.11",
    "praw>=7.8.1",
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
